xidlc/tests/invalid/http_security_duplicate_bearer.idl
#progma xidlc package xidlc
#progma xidlc version v1.0.0

interface InvalidDuplicateBearerSecurityService {
    @http_bearer
    @http_bearer
    @get(path = "/reports")
    string list_reports();
};
